@@ -26,235 +26,181 @@
  * @version $Id$
  */
 
-require './config.php';
-
-require './includes/functions/functions_edit.php';
-
-//-- page parameters and checking
-
-$linktoid	= safe_GET_xref('linktoid');
-$mediaid	= safe_GET_xref('mediaid');
-$linkto		= safe_GET     ('linkto', array('person', 'source', 'family'));
-$action		= safe_GET     ('action', PGV_REGEX_ALPHA, 'choose');
-
-$more_links	= safe_REQUEST($_REQUEST, 'more_links', PGV_REGEX_UNSAFE);
-
-
-if (empty($linktoid) || empty($linkto)) {
-	$paramok = false;
-	$toitems = "???";
+// If GedFAct_assistant/MEDIA/ installed ======================
+if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
+	include 'modules/GEDFact_assistant/MEDIA/media_0_inverselink.php';
 } else {
-	switch ($linkto) {
-	case 'person':
-		$toitems = $pgv_lang['to_person'];
-		break;
-	case 'family':
-		$toitems = $pgv_lang['to_family'];
-		break;
-	case 'source':
-		$toitems = $pgv_lang['to_source'];
-		break;
-	}
-}
 
-print_simple_header($pgv_lang["link_media"]." ".$toitems);
+	require './config.php';
+	require './includes/functions/functions_edit.php';
 
-if ($ENABLE_AUTOCOMPLETE) require './js/autocomplete.js.htm';
+	//-- page parameters and checking
+	$linktoid	= safe_GET_xref('linktoid');
+	$mediaid	= safe_GET_xref('mediaid');
+	$linkto		= safe_GET     ('linkto', array('person', 'source', 'family'));
+	$action		= safe_GET     ('action', PGV_REGEX_ALPHA, 'choose');
+	
+	$more_links	= safe_REQUEST($_REQUEST, 'more_links', PGV_REGEX_UNSAFE);
 
-//-- check for admin
-$paramok =  PGV_USER_CAN_EDIT;
-if (!empty($linktoid)) $paramok = displayDetailsById($linktoid);
-
-if ($action == "choose" && $paramok) {
-	?>
-	<script language="JavaScript" type="text/javascript">
-	<!--
-	var pastefield;
-	var language_filter, magnify;
-	language_filter = "";
-	magnify = "";
-
-	function openerpasteid(id) {
-		window.opener.paste_id(id);
-		window.close();
-	}
-
-	function paste_id(value) {
-		pastefield.value = value;
-	}
-
-	function paste_char(value,lang,mag) {
-		pastefield.value += value;
-		language_filter = lang;
-		magnify = mag;
-	}
-	//-->
-	</script>
-	<script src="phpgedview.js" language="JavaScript" type="text/javascript"></script>
-
-	<?php
-	echo '<form name="link" method="get" action="inverselink.php">';
-	echo '<input type="hidden" name="action" value="update" />';
-	if (!empty($mediaid)) {
-		echo '<input type="hidden" name="mediaid" value="', $mediaid, '" />';
-	}
-	if (!empty($linktoid)) {
-		echo '<input type="hidden" name="linktoid" value="', $linktoid, '" />';
-	}
-	echo '<input type="hidden" name="linkto" value="', $linkto, '" />';
-	echo '<input type="hidden" name="ged" value="', $GEDCOM, '" />';
-	echo '<table class="facts_table center ', $TEXT_DIRECTION, '">';
-	echo '<tr><td class="topbottombar" colspan="2">';
-	print_help_link("add_media_linkid","qm", "link_media");
-	echo $pgv_lang["link_media"], ' ', $toitems, '</td></tr>';
-	echo '<tr><td class="descriptionbox width20 wrap">', $pgv_lang["media_id"], '</td>';
-	echo '<td class="optionbox wrap">';
-	if (!empty($mediaid)) {
-		//-- Get the title of this existing Media item
-		$title=
-			PGV_DB::prepare("SELECT m_titl FROM {$TBLPREFIX}media where m_media=? AND m_gedfile=?")
-			->execute(array($mediaid, PGV_GED_ID))
-			->fetchOne();
-		if ($title) {
-			echo '<b>', PrintReady($title), '</b>&nbsp;&nbsp;&nbsp;';
-			if ($TEXT_DIRECTION=="rtl") echo getRLM();
-			echo '(', $mediaid, ')';
-			if ($TEXT_DIRECTION=="rtl") echo getRLM();
-		} else {
-			echo '<b>', $mediaid, '</b>';
+	if (empty($linktoid) || empty($linkto)) {
+		$paramok = false;
+		$toitems = "???";
+	} else {
+		switch ($linkto) {
+		case 'person':
+			$toitems = $pgv_lang['to_person'];
+			break;
+		case 'family':
+			$toitems = $pgv_lang['to_family'];
+			break;
+		case 'source':
+			$toitems = $pgv_lang['to_source'];
+			break;
 		}
-		
-		// GEDFact assistant Current Media Links ===================
-		if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
-			echo '<table><tr><td>';
-			//-- Get the filename of this existing Media item
-			$filename=
-				PGV_DB::prepare("SELECT m_file FROM {$TBLPREFIX}media where m_media=? AND m_gedfile=?")
+	}
+
+	print_simple_header($pgv_lang["link_media"]." ".$toitems);
+
+	if ($ENABLE_AUTOCOMPLETE) require './js/autocomplete.js.htm';
+
+	//-- check for admin
+	$paramok =  PGV_USER_CAN_EDIT;
+	if (!empty($linktoid)) $paramok = displayDetailsById($linktoid);
+
+	if ($action == "choose" && $paramok) {
+		?>
+		<script language="JavaScript" type="text/javascript">
+		<!--
+		var pastefield;
+		var language_filter, magnify;
+		language_filter = "";
+		magnify = "";
+
+		function openerpasteid(id) {
+			window.opener.paste_id(id);
+			window.close();
+		}
+
+		function paste_id(value) {
+			pastefield.value = value;
+		}
+
+		function paste_char(value,lang,mag) {
+			pastefield.value += value;
+			language_filter = lang;
+			magnify = mag;
+		}
+		//-->
+		</script>
+		<script src="phpgedview.js" language="JavaScript" type="text/javascript"></script>
+
+		<?php
+		echo '<form name="link" method="get" action="inverselink.php">';
+		echo '<input type="hidden" name="action" value="update" />';
+		if (!empty($mediaid)) {
+			echo '<input type="hidden" name="mediaid" value="', $mediaid, '" />';
+		}
+		if (!empty($linktoid)) {
+			echo '<input type="hidden" name="linktoid" value="', $linktoid, '" />';
+		}
+		echo '<input type="hidden" name="linkto" value="', $linkto, '" />';
+		echo '<input type="hidden" name="ged" value="', $GEDCOM, '" />';
+		echo '<table class="facts_table center ', $TEXT_DIRECTION, '">';
+		echo '<tr><td class="topbottombar" colspan="2">';
+		print_help_link("add_media_linkid","qm", "link_media");
+		echo $pgv_lang["link_media"], ' ', $toitems, '</td></tr>';
+		echo '<tr><td class="descriptionbox width20 wrap">', $pgv_lang["media_id"], '</td>';
+		echo '<td class="optionbox wrap">';
+		if (!empty($mediaid)) {
+			//-- Get the title of this existing Media item
+			$title=
+				PGV_DB::prepare("SELECT m_titl FROM {$TBLPREFIX}media where m_media=? AND m_gedfile=?")
 				->execute(array($mediaid, PGV_GED_ID))
 				->fetchOne();
-			echo '<img src = ', $filename, ' height="70" ></img>&nbsp;&nbsp;&nbsp;&nbsp;';
-			echo '</td></tr></table>';
-			echo '</td></tr>';
-			echo '<tr><td class="descriptionbox width20 wrap">', $pgv_lang["current_links"], '</td>';
-			echo '<td class="optionbox wrap">';
-				include ('modules/GEDFact_assistant/MEDIA/media_query_1a.php');
-			echo '</td></tr>';
-		}
-		// =========================================================
-	} else {
-		echo '<input type="text" name="mediaid" id="mediaid" size="5" />';
-		print_findmedia_link("mediaid","1media");
-		echo "</td></tr>";
-	}
-	
-	if (!isset($linktoid)) $linktoid = "";
-	echo '<tr><td class="descriptionbox">';
-	
-	if ($linkto == "person") {
-		// GEDFact assistant Add Media Links =======================
-		if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php') && !empty($mediaid)) {
-			echo $pgv_lang["add_more_links"];
-			echo '<td class="optionbox wrap">';
-			echo 'a) &nbsp;', $pgv_lang["enter_pid_or_name"], '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
-		// =========================================================
+			if ($title) {
+				echo '<b>', PrintReady($title), '</b>&nbsp;&nbsp;&nbsp;';
+				if ($TEXT_DIRECTION=="rtl") echo getRLM();
+				echo '(', $mediaid, ')';
+				if ($TEXT_DIRECTION=="rtl") echo getRLM();
+			} else {
+				echo '<b>', $mediaid, '</b>';
+			}
 		} else {
+			echo '<input type="text" name="mediaid" id="mediaid" size="5" />';
+			print_findmedia_link("mediaid","1media");
+			echo "</td></tr>";
+		}
+		
+		if (!isset($linktoid)) $linktoid = "";
+		echo '<tr><td class="descriptionbox">';
+		
+		if ($linkto == "person") {
 			echo $pgv_lang["enter_pid"]."</td>";
 			echo '<td class="optionbox wrap">';
-		}
-		if ($linktoid=="") {
-			echo '<input class="pedigree_form" type="text" name="linktoid" id="linktopid" size="3" value="', $linktoid, '" />';
-			print_findindi_link("linktopid","");
-			
-		} else {
-			$record=Person::getInstance($linktoid);
-			echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-			echo '(', $linktoid, ')';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-		}
-		echo "<br /><br />";
-		// GEDFact assistant Add Media Links =======================
-		if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php') && !empty($mediaid)) {
-			include ('modules/GEDFact_assistant/MEDIA/media_query_2a.php');
-			echo '</td></tr>';
-			echo '<tr><td colspan="2">';
-			echo '</td></tr>';
-			echo '<input type="hidden" name="more_links" value="No_Values" />';
-			echo '<tr><td class="topbottombar" colspan="2">';
-			echo '<center><input type="submit" value="', $pgv_lang["set_links"], '" onclick="javascript:shiftlinks();" />';
-			echo '</center></td></tr>';
-			include ('modules/GEDFact_assistant/MEDIA/media_7_parse_addLinksTbl.php');
-		// =========================================================
-		}else{
+			if ($linktoid=="") {
+				 echo '<input class="pedigree_form" type="text" name="linktoid" id="linktopid" size="3" value="', $linktoid, '" />';
+				 print_findindi_link("linktopid","");
+				
+			} else {
+				$record=Person::getInstance($linktoid);
+				echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
+				echo '(', $linktoid, ')';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
+			}
 			echo '<tr><td class="topbottombar" colspan="2"><input type="submit" value="', $pgv_lang["set_link"], '" /></td></tr>';
 		}
-	}
-	
-	if ($linkto == "family") {
-		echo $pgv_lang["family"], '</td>';
-		echo '<td class="optionbox wrap">';
-		if ($linktoid=="") {
-			echo '<input class="pedigree_form" type="text" name="linktoid" id="linktofamid" size="3" value="', $linktoid, '" />';
-			print_findfamily_link("linktofamid");
-		} else {
-			$record=Family::getInstance($linktoid);
-			echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-			echo '(', $linktoid, ')';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-		}
-		echo '</td></tr>';
-		echo '<tr><td class="topbottombar" colspan="2"><input type="submit" value="', $pgv_lang["set_link"], '" /></td></tr>';
-	}
-	
-	if ($linkto == "source") {
-		echo $pgv_lang["source"]."</td>";
-		echo '<td  class="optionbox wrap">';
-		if ($linktoid=="") {
-			echo '<input class="pedigree_form" type="text" name="linktoid" id="linktosid" size="3" value="', $linktoid, '" />';
-			print_findsource_link("linktosid");
-		} else {
-			$record=Source::getInstance($linktoid);
-			echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-			echo '(', $linktoid, ')';
-			if ($TEXT_DIRECTION=="rtl") print getRLM();
-		}
-		echo '</td></tr>';
-		echo '<tr><td class="topbottombar" colspan="2"><input type="submit" value="', $pgv_lang["set_link"], '" /></td></tr>';
-	}
-	
-	echo '</table>';
-	echo '</form>';
-	echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
-	print_simple_footer();
-	
-} elseif ($action == "update" && $paramok) {
 
-	// GEDFact assistant Add Media Links =======================
-	if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php') && !empty($mediaid)) {
-		if (isset($more_links) && $more_links!="No_Values") {
-			$more_links = stripslashes($more_links);
-			$add_more_links = explode(", ", $more_links);
-			foreach ($add_more_links as $link2id) {
-				echo $mediaid, $pgv_lang["media_now_linked to"], '(', $link2id, ')<br />';
-				linkMedia($mediaid, $link2id);
+		if ($linkto == "family") {
+			echo $pgv_lang["family"], '</td>';
+			echo '<td class="optionbox wrap">';
+			if ($linktoid=="") {
+				echo '<input class="pedigree_form" type="text" name="linktoid" id="linktofamid" size="3" value="', $linktoid, '" />';
+				print_findfamily_link("linktofamid");
+			} else {
+				$record=Family::getInstance($linktoid);
+				echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
+				echo '(', $linktoid, ')';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
 			}
-		}else{
-			linkMedia($mediaid, $linktoid);
+			echo '</td></tr>';
+			echo '<tr><td class="topbottombar" colspan="2"><input type="submit" value="', $pgv_lang["set_link"], '" /></td></tr>';
 		}
-	// =========================================================
-	}else{
+		
+		if ($linkto == "source") {
+			echo $pgv_lang["source"]."</td>";
+			echo '<td  class="optionbox wrap">';
+			if ($linktoid=="") {
+				echo '<input class="pedigree_form" type="text" name="linktoid" id="linktosid" size="3" value="', $linktoid, '" />';
+				print_findsource_link("linktosid");
+			} else {
+				$record=Source::getInstance($linktoid);
+				echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
+				echo '(', $linktoid, ')';
+				if ($TEXT_DIRECTION=="rtl") print getRLM();
+			}
+			echo '</td></tr>';
+			echo '<tr><td class="topbottombar" colspan="2"><input type="submit" value="', $pgv_lang["set_link"], '" /></td></tr>';
+		}
+		
+		echo '</table>';
+		echo '</form>';
+		echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
+		print_simple_footer();
+		
+	} elseif ($action == "update" && $paramok) {
 		linkMedia($mediaid, $linktoid);
+		echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
+		print_simple_footer();
+		
+	} else {
+		echo '<center>nothing to do<center>';
+		echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
+		print_simple_footer();
 	}
-	
-	echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
-	print_simple_footer();
-	
-} else {
-	echo '<center>nothing to do<center>';
-	echo '<br/><br/><center><a href="javascript:;" onclick="if (window.opener.showchanges) window.opener.showchanges(); window.close();">', $pgv_lang["close_window"], '</a><br /></center>';
-	print_simple_footer();
-}
+
+} 
 
 ?>
